# ComfyUI_VLM_nodes

./: README.md  __init__.py  cpp_agent_req.txt  install_init.py  installer.bat  moondream_script.py  pyproject.toml  requirements.txt
examples/: auto_prompt_generation.json  img2music_workflow_gokay.json  simple_llava.json
js/: jsonToText.js  playSound.js  viewText.js
moondream/: vision_encoder.py
nodes/: audioldm2.py  description.py  internlm.py  joytag.py  kosmos2.py  llavaloader.py  mcllava.py  minicpm.py  molmo.py  moondream2.py  moondream_script.py  paligemma.py  pixtral.py  playmusic.py  prompter.py  prompts.py  qwen2vl.py  simple_prompt.py  simpletext.py  suggest.py  uform.py
nodes/joytagger/: Models.py
nodes/moondream/: text_model.py
nodes/moondream/phi/: modeling_phi.py
web/js/: jsonToText.js  playSound.js  viewText.js
